--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -241,6 +241,14 @@ body {
   width: 30em;
 }
 
+input[type=date] {
+  height: 38px;
+  padding: 6px 10px;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
+  font-size: 11px;
+}
+
 .suggestions {
   font-size: 1.1rem;
 }
