--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -69,11 +69,7 @@
       <header>Eats</header>
       <div class="items hidden">
         {{#each saved_eats}}
-<<<<<<< HEAD
-        <div class="item" data-lat="{{this.eat.latitude}}" data-lng="{{this.eat.longitude}}">
-=======
-        <div data-id="{{this.eat.id}}" data-lat="{{this.eat.latitude}}" data-lng="{{this.eat.longitude}}">
->>>>>>> a6f20c74c35a534fed5b3c96987e3428a6be54cf
+        <div class="item" data-id="{{this.eat.id}}" data-lat="{{this.eat.latitude}}" data-lng="{{this.eat.longitude}}">
           <div class="title">{{this.eat.title}}</div>
         </div>
         {{/each}}
